pxc/tests/test_032_namespace/testns2.px
public namespace testns2;
public import common -;
public import ns1::bar -; // error

{
  bar x;
  println(x);
}
